shopping cart made(HTML,CSS)

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
             </div>
         </nav>
 
+        <button class="shopping-cart">
+            Koszyk
+            <i class="fa-solid fa-cart-shopping"></i>
+            <div class="counter-container">
+                <p class="counter">0</p>
+            </div>
+        </button>
+
         <header class="header" id="home">
             <video src="./video/Pizza.mp4" class="header__video" loop muted autoplay></video>
             <img src="./img/pizzaheader.jpg" alt="sie później uzupełni" class="header__img" />
@@ -86,6 +94,8 @@
                 </div>
                 <i id="right" class="fa-solid fa-angle-right"></i>
             </div>
+
+
 
         </section>
 
@@ -896,7 +906,8 @@
                                     <label for="phone" class="old-label"></label>
                                     <div class="new-phone new-el">
                                         <label class="new-label">Nr telefonu</label>
-                                        <input class="new-input" id="newPhone" type="text" placeholder="np. 518 462 918">
+                                        <input class="new-input" id="newPhone" type="text"
+                                            placeholder="np. 518 462 918">
                                         <p class="error-text">Nieprawidłowy numer telefonu</p>
                                     </div>
                                 </div>
@@ -906,7 +917,8 @@
                                     <label for="email" class="old-label"></label>
                                     <div class="new-email new-el">
                                         <label class="new-label">adres e-mail</label>
-                                        <input class="new-input" id="newEmail" type="email" placeholder="np. jankowalski@email.pl">
+                                        <input class="new-input" id="newEmail" type="email"
+                                            placeholder="np. jankowalski@email.pl">
                                         <p class="error-text">Nieprawidłowy adres email</p>
                                     </div>
                                 </div>
@@ -983,7 +995,7 @@
     <script src="./js/mobileNav.js"></script>
     <script src="./js/slider.js"></script>
     <script src="./js/opinion.js"></script>
-    <script src="./js/menu.js"></script>
+    <script src="./js/menuAndPurchase.js"></script>
     <script src="./js/contactForm.js"></script>
 </body>
 
