--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                 Koszyk
                 <i class="fa-solid fa-cart-shopping"></i>
                 <div class="counter-container">
-                    <p class="counter">0</p>
+                    <p class="counter"></p>
                 </div>
             </button>
 
@@ -476,9 +476,9 @@
                 <div class="choice pizza-size">
                     <p class="category-name">Rozmiar</p>
                     <div class="inputs">
-                        <input type="radio" id="small">Mała
-                        <input type="radio" id="medium">Średnia
-                        <input type="radio" id="big">Duża
+                        <input type="radio" id="small-pizza">Mała
+                        <input type="radio" id="medium-pizza">Średnia
+                        <input type="radio" id="big-pizza">Duża
                     </div>
                 </div>
 
@@ -506,7 +506,13 @@
                     <button class="close-btn" id="closeModalBtn">X</button>
                 </div>
                 <p class="el-name"></p>
-                <p>sosy</p>
+                <div class="line"></div>
+                <p class="category-name">Rozmiar</p>
+                <div class="inputs">
+                    <input type="radio" id="small-sauce">Mały
+                    <input type="radio" id="medium-sauce">Duży
+                </div>
+
                 <div class="add-item-btn-container">
                     <button class="btn" id="addItemBtn">Dodaj do koszyka</button>
                 </div>
@@ -517,15 +523,52 @@
                     <button class="close-btn" id="closeModalBtn">X</button>
                 </div>
                 <p class="el-name"></p>
-                <p>Napoje</p>
+                <div class="line"></div>
+                <div class="choice">
+                    <p class="category-name">Rozmiar</p>
+                    <div class="inputs">
+                        <input type="radio" id="small-drinks">0,33l
+                        <input type="radio" id="medium-drinks">0,5l
+                        <input type="radio" id="big-drinks">0,85l
+                    </div>
+                </div>
                 <div class="add-item-btn-container">
                     <button class="btn" id="addItemBtn">Dodaj do koszyka</button>
+
                 </div>
             </div>
 
-            <!-- <div class="modal modal-general">
-                <p>modal general</p>
-            </div> -->
+            <div class="modal-overlay"></div>
+
+            <div class="modal modal-cart">
+
+                <div class="close-btn-container">
+                    <button class="close-btn" id="closeModalBtn">X</button>
+                </div>
+
+                <div class="products-list">
+                    <div class="cart-empty">
+                        <p>Koszyk jest pusty</p>
+                        <div class="line"></div>
+                    </div>
+
+                    <!-- <div class="product"> 
+                        <p class="product-name">coś</p>
+                        <p class="product-details">cos1, coś2, cos3, cos4</p>
+                        <div class="line"></div>
+                    </div> -->
+                </div>
+
+                <p class="owing">Do zapłaty: </p>
+
+                <div class="line"></div>
+
+                <div class="add-item-btn-container">
+                    <button class="btn" id="">Do kasy </button>
+                </div>
+
+            </div>
+            </div>
 
             <h2 class="menu__heading">Nasze Menu</h2>
             <div class="menu__list">
@@ -693,6 +736,7 @@
                         </p>
                     </div>
                     <div class="sauce__prices element__prices">
+                        <p>2,00zł</p>
                         <p>4,00zł</p>
                     </div>
                     <a class="sauce__btn element__btn">Dodaj do koszyka</a>
@@ -705,6 +749,7 @@
                         </p>
                     </div>
                     <div class="sauce__prices element__prices">
+                        <p>2,00zł</p>
                         <p>4,00zł</p>
                     </div>
                     <a class="sauce__btn element__btn">Dodaj do koszyka</a>
@@ -717,6 +762,7 @@
                         </p>
                     </div>
                     <div class="sauce__prices element__prices">
+                        <p>2,00zł</p>
                         <p>4,00zł</p>
                     </div>
                     <a class="sauce__btn element__btn">Dodaj do koszyka</a>
@@ -729,6 +775,7 @@
                         </p>
                     </div>
                     <div class="sauce__prices element__prices">
+                        <p>2,00zł</p>
                         <p>4,00zł</p>
                     </div>
                     <a class="sauce__btn element__btn">Dodaj do koszyka</a>
@@ -741,6 +788,7 @@
                         </p>
                     </div>
                     <div class="sauce__prices element__prices">
+                        <p>2,00zł</p>
                         <p>4,00zł</p>
                     </div>
                     <a class="sauce__btn element__btn">Dodaj do koszyka</a>
@@ -753,6 +801,7 @@
                         </p>
                     </div>
                     <div class="sauce__prices element__prices">
+                        <p>2,00zł</p>
                         <p>4,00zł</p>
                     </div>
                     <a class="sauce__btn element__btn">Dodaj do koszyka</a>
@@ -765,6 +814,7 @@
                         </p>
                     </div>
                     <div class="sauce__prices element__prices">
+                        <p>2,00zł</p>
                         <p>4,00zł</p>
                     </div>
                     <a class="sauce__btn element__btn">Dodaj do koszyka</a>
@@ -779,7 +829,9 @@
                         </p>
                     </div>
                     <div class="drinks__prices element__prices">
+                        <p>0,33l - 4,00zł</p>
                         <p>0,5l - 6,00zł</p>
+                        <p>0,85l - 7,50zł</p>
                     </div>
                     <a class="drinks__btn element__btn">Dodaj do koszyka</a>
                 </div>
@@ -791,7 +843,9 @@
                         </p>
                     </div>
                     <div class="drinks__prices element__prices">
+                        <p>0,33l - 4,00zł</p>
                         <p>0,5l - 6,00zł</p>
+                        <p>0,85l - 7,50zł</p>
                     </div>
                     <a class="drinks__btn element__btn">Dodaj do koszyka</a>
                 </div>
@@ -803,7 +857,9 @@
                         </p>
                     </div>
                     <div class="drinks__prices element__prices">
+                        <p>0,33l - 4,00zł</p>
                         <p>0,5l - 6,00zł</p>
+                        <p>0,85l - 7,50zł</p>
                     </div>
                     <a class="drinks__btn element__btn">Dodaj do koszyka</a>
                 </div>
@@ -815,7 +871,9 @@
                         </p>
                     </div>
                     <div class="drinks__prices element__prices">
-                        <p>0,33l - 5,00zł</p>
+                        <p>0,33l - 3,00zł</p>
+                        <p>0,5l - 4,00zł</p>
+                        <p>0,85l - 6,00zł</p>
                     </div>
                     <a class="drinks__btn element__btn">Dodaj do koszyka</a>
                 </div>
@@ -827,7 +885,9 @@
                         </p>
                     </div>
                     <div class="drinks__prices element__prices">
-                        <p>0,33l - 5,00zł</p>
+                        <p>0,33l - 3,00zł</p>
+                        <p>0,5l - 4,00zł</p>
+                        <p>0,85l - 6,00zł</p>
                     </div>
                     <a class="drinks__btn element__btn">Dodaj do koszyka</a>
                 </div>
@@ -839,7 +899,9 @@
                         </p>
                     </div>
                     <div class="drinks__prices element__prices">
+                        <p>0,33l - 4,00zł</p>
                         <p>0,5l - 6,00zł</p>
+                        <p>0,85l - 7,50zł</p>
                     </div>
                     <a class="drinks__btn element__btn">Dodaj do koszyka</a>
                 </div>
