small code corrections

--- a/index.html
+++ b/index.html
@@ -86,9 +86,6 @@
                 </div>
                 <i id="right" class="fa-solid fa-angle-right"></i>
             </div>
-
-
-
         </section>
 
         <section class="opinion wrapper">
@@ -458,118 +455,6 @@
         </section>
 
         <section class="menu wrapper" id="menu">
-
-            <button class="shopping-cart">
-                Koszyk
-                <i class="fa-solid fa-cart-shopping"></i>
-                <div class="counter-container">
-                    <p class="counter"></p>
-                </div>
-            </button>
-
-            <div class="modal modal-pizza">
-                <div class="close-btn-container">
-                    <button class="close-btn" id="closeModalBtn">X</button>
-                </div>
-                <p class="el-name"></p>
-                <div class="line"></div>
-                <div class="choice pizza-size">
-                    <p class="category-name">Rozmiar</p>
-                    <div class="inputs">
-                        <input type="radio" id="small-pizza">Mała
-                        <input type="radio" id="medium-pizza">Średnia
-                        <input type="radio" id="big-pizza">Duża
-                    </div>
-                </div>
-
-                <div class="choice pizza-base">
-                    <p class="category-name">Ciasto</p>
-                    <div class="inputs">
-                        <input type="radio" id="flat">Cieńkie
-                        <input type="radio" id="thick">Grube
-                    </div>
-                </div>
-
-                <div class="pizza-ingredients">
-                    <div class="last">
-                        <p class="category-name">Składniki</p>
-                        <p class="ingredients"></p>
-                    </div>
-                </div>
-                <div class="add-item-btn-container">
-                    <button class="btn" id="addItemBtn">Dodaj do koszyka</button>
-                </div>
-            </div>
-
-            <div class="modal modal-sauce">
-                <div class="close-btn-container">
-                    <button class="close-btn" id="closeModalBtn">X</button>
-                </div>
-                <p class="el-name"></p>
-                <div class="line"></div>
-                <p class="category-name">Rozmiar</p>
-                <div class="inputs">
-                    <input type="radio" id="small-sauce">Mały
-                    <input type="radio" id="medium-sauce">Duży
-                </div>
-
-                <div class="add-item-btn-container">
-                    <button class="btn" id="addItemBtn">Dodaj do koszyka</button>
-                </div>
-            </div>
-
-            <div class="modal modal-drinks">
-                <div class="close-btn-container">
-                    <button class="close-btn" id="closeModalBtn">X</button>
-                </div>
-                <p class="el-name"></p>
-                <div class="line"></div>
-                <div class="choice">
-                    <p class="category-name">Rozmiar</p>
-                    <div class="inputs">
-                        <input type="radio" id="small-drinks">0,33l
-                        <input type="radio" id="medium-drinks">0,5l
-                        <input type="radio" id="big-drinks">0,85l
-                    </div>
-                </div>
-                <div class="add-item-btn-container">
-                    <button class="btn" id="addItemBtn">Dodaj do koszyka</button>
-
-                </div>
-            </div>
-
-            <div class="modal-overlay"></div>
-
-            <div class="modal modal-cart">
-
-                <div class="close-btn-container">
-                    <button class="close-btn" id="closeModalBtn">X</button>
-                </div>
-
-                <div class="products-list">
-                    <div class="cart-empty">
-                        <p>Koszyk jest pusty</p>
-                        <div class="line"></div>
-                    </div>
-
-                    <!-- <div class="product"> 
-                        <p class="product-name">coś</p>
-                        <p class="product-details">cos1, coś2, cos3, cos4</p>
-                        <div class="line"></div>
-                    </div> -->
-                </div>
-
-                <p class="owing">Do zapłaty: </p>
-
-                <div class="line"></div>
-
-                <div class="add-item-btn-container">
-                    <button class="btn" id="">Do kasy </button>
-                </div>
-
-            </div>
-            </div>
-
             <h2 class="menu__heading">Nasze Menu</h2>
             <div class="menu__list">
                 <a class="menu-pizza">Pizza</a>
@@ -593,7 +478,6 @@
                         <p>25,00zł</p>
                         <p>36,00zł</p>
                     </div>
-                    <a class="pizza__btn element__btn" id="margharita">Dodaj do koszyka</a>
                 </div>
 
                 <div class="pizza__list element__list">
@@ -611,7 +495,6 @@
                         <p>25,00zł</p>
                         <p>36,00zł</p>
                     </div>
-                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="pizza__list element__list">
@@ -629,7 +512,6 @@
                         <p>35,00zł</p>
                         <p>45,00zł</p>
                     </div>
-                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="pizza__list element__list">
@@ -644,7 +526,6 @@
                         <p>29,00zł</p>
                         <p>40,00zł</p>
                     </div>
-                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="pizza__list element__list">
@@ -659,7 +540,6 @@
                         <p>44,00zł</p>
                         <p>52,00zł</p>
                     </div>
-                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="pizza__list element__list">
@@ -676,7 +556,6 @@
                         <p>36,00zł</p>
                         <p>47,00zł</p>
                     </div>
-                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="pizza__list element__list">
@@ -694,7 +573,6 @@
                         <p>31,00zł</p>
                         <p>42,00zł</p>
                     </div>
-                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="pizza__list element__list">
@@ -709,7 +587,6 @@
                         <p>36,00zł</p>
                         <p>47,00zł</p>
                     </div>
-                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="pizza__list element__list">
@@ -724,7 +601,6 @@
                         <p>30,00zł</p>
                         <p>41,00zł</p>
                     </div>
-                    <a class="pizza__btn element__btn">Dodaj do koszyka</a>
                 </div>
             </div>
 
@@ -739,7 +615,6 @@
                         <p>2,00zł</p>
                         <p>4,00zł</p>
                     </div>
-                    <a class="sauce__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="sauce__list element__list">
@@ -752,7 +627,6 @@
                         <p>2,00zł</p>
                         <p>4,00zł</p>
                     </div>
-                    <a class="sauce__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="sauce__list element__list">
@@ -765,7 +639,6 @@
                         <p>2,00zł</p>
                         <p>4,00zł</p>
                     </div>
-                    <a class="sauce__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="sauce__list element__list">
@@ -778,7 +651,6 @@
                         <p>2,00zł</p>
                         <p>4,00zł</p>
                     </div>
-                    <a class="sauce__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="sauce__list element__list">
@@ -791,7 +663,6 @@
                         <p>2,00zł</p>
                         <p>4,00zł</p>
                     </div>
-                    <a class="sauce__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="sauce__list element__list">
@@ -804,7 +675,6 @@
                         <p>2,00zł</p>
                         <p>4,00zł</p>
                     </div>
-                    <a class="sauce__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="sauce__list element__list">
@@ -817,7 +687,6 @@
                         <p>2,00zł</p>
                         <p>4,00zł</p>
                     </div>
-                    <a class="sauce__btn element__btn">Dodaj do koszyka</a>
                 </div>
             </div>
 
@@ -833,7 +702,6 @@
                         <p>0,5l - 6,00zł</p>
                         <p>0,85l - 7,50zł</p>
                     </div>
-                    <a class="drinks__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="drinks__list element__list">
@@ -847,7 +715,6 @@
                         <p>0,5l - 6,00zł</p>
                         <p>0,85l - 7,50zł</p>
                     </div>
-                    <a class="drinks__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="drinks__list element__list">
@@ -861,7 +728,6 @@
                         <p>0,5l - 6,00zł</p>
                         <p>0,85l - 7,50zł</p>
                     </div>
-                    <a class="drinks__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="drinks__list element__list">
@@ -875,7 +741,6 @@
                         <p>0,5l - 4,00zł</p>
                         <p>0,85l - 6,00zł</p>
                     </div>
-                    <a class="drinks__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="drinks__list element__list">
@@ -889,7 +754,6 @@
                         <p>0,5l - 4,00zł</p>
                         <p>0,85l - 6,00zł</p>
                     </div>
-                    <a class="drinks__btn element__btn">Dodaj do koszyka</a>
                 </div>
 
                 <div class="drinks__list element__list">
@@ -903,10 +767,8 @@
                         <p>0,5l - 6,00zł</p>
                         <p>0,85l - 7,50zł</p>
                     </div>
-                    <a class="drinks__btn element__btn">Dodaj do koszyka</a>
                 </div>
             </div>
-
         </section>
 
         <section class="contact wrapper" id="contact">
@@ -1105,7 +967,7 @@
             </div>
             <div class="footer__element footer__payment">
                 <p>Nasze formy płatności: <br>Gotówka, karta lub szybki przelew:</p>
-                <a href="#menu" class="footer__btn">Zamów online</a>
+                <a href="#menu" class="footer__btn">Wybierz i zamów</a>
             </div>
         </div>
 
