small code corrections

--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
     <script src="./js/mobileNav.js"></script>
     <script src="./js/slider.js"></script>
     <script src="./js/opinion.js"></script>
-    <script src="./js/menuAndPurchase.js"></script>
+    <script src="./js/menu.js"></script>
     <script src="./js/contactForm.js"></script>
 </body>
 
